--- a/RandomLevelGeneratorDemo/MainWindow.xaml
+++ b/RandomLevelGeneratorDemo/MainWindow.xaml
@@ -49,7 +49,7 @@
                     <Border Margin="4" BorderThickness="1" BorderBrush="Black">
                         <StackPanel>
                             <Label Content="Seed" HorizontalAlignment="Center"/>
-                            <TextBox Margin="10"/>
+                            <TextBox TextChanged="SeedTextBox_TextChanged" Name="SeedTextBox" Margin="10"/>
                         </StackPanel>
                     </Border>
                     <Border Margin="4" BorderThickness="1" BorderBrush="Black">
