Make sliders update to default values on load

--- a/RandomLevelGeneratorDemo/MainWindow.xaml
+++ b/RandomLevelGeneratorDemo/MainWindow.xaml
@@ -45,9 +45,9 @@
                 <StackPanel Orientation="Vertical">
                     <Label Content="Parameters" HorizontalAlignment="Center"/>
                     <StackPanel>
-                        <Slider Template="{StaticResource ParameterSlider}" Tag="Level Width" Value="{Binding ElementName=mainWindow, Mode=OneWayToSource, Path=LevelWidth}" Minimum="0" Maximum="50"/>
-                        <Slider Template="{StaticResource ParameterSlider}" Tag="Level Height" Value="{Binding ElementName=mainWindow, Mode=OneWayToSource, Path=LevelHeight}" Minimum="0" Maximum="50"/>
-                        <Slider Template="{StaticResource ParameterSlider}" Tag="Number of Rooms" Value="{Binding ElementName=mainWindow, Mode=OneWayToSource, Path=NumRooms}" Minimum="0" Maximum="25"/>
+                        <Slider Name="LevelWidthSlider" Template="{StaticResource ParameterSlider}" Tag="Level Width" Value="{Binding ElementName=mainWindow, Mode=TwoWay, Path=LevelWidth}" Minimum="0" Maximum="50"/>
+                        <Slider Name="LevelHeightSlider" Template="{StaticResource ParameterSlider}" Tag="Level Height" Value="{Binding ElementName=mainWindow, Mode=TwoWay, Path=LevelHeight}" Minimum="0" Maximum="50"/>
+                        <Slider Name="NumRoomsSlider" Template="{StaticResource ParameterSlider}" Tag="Number of Rooms" Value="{Binding ElementName=mainWindow, Mode=TwoWay, Path=NumRooms}" Minimum="0" Maximum="25"/>
 
                         <Border Margin="4" BorderThickness="1" BorderBrush="Black">
                             <StackPanel>
